@@ -6,6 +6,8 @@ partman-auto (81) UNRELEASED; urgency=low
   * Use convert_to_megabytes() in decode_recipe(), autopartition and
     perform_recipe.
     Depends: partman-base (>= 125)
+  * Rename $devfspv_devices to $pv_devices in lib/auto-shared.sh now that we
+    don't have devfs devices anymore.
 
  -- Jérémy Bobbio <lunar@debian.org>  Fri, 01 Aug 2008 22:49:11 +0000
 
