@@ -6,6 +6,9 @@ partman-auto-lvm (29) UNRELEASED; urgency=low
   [ Jérémy Bobbio ]
   * Use convert_to_megabytes() in auto_lvm_prepare().
     Depends: partman-base (>= 125)
+  * Replace $devfs_pvdevices by $pv_devices in auto_lvm_prepare() and remove
+    devfs resolving in autopartition-lvm.
+    Depends: partman-auto (>= 81)
 
  -- Jérémy Bobbio <lunar@debian.org>  Sat, 16 Aug 2008 16:03:07 +0000
 
